# CMGDB_temp

./: CMakeLists.txt  CMakeLists_copy.txt  install.sh  vcpkg.json  wheels.yml
.github/workflows/: publish_pypi.yml
